adjusting resource  groups

--- a/.github/workflows/IaC_deploy.yml
+++ b/.github/workflows/IaC_deploy.yml
@@ -56,8 +56,8 @@ jobs:
       uses: azure/CLI@v1
       with:
         inlineScript: |
-          az functionapp config appsettings set --name ${{ steps.ladeploy.outputs.LAname }} --resource-group  ${{ secrets.RG_LA }} --settings "BLOB_CONNECTION_RUNTIMEURL=${{ steps.msdemoconn.outputs.blobendpointurl }}"
-          az functionapp config appsettings set --name ${{ steps.ladeploy.outputs.LAname }} --resource-group  ${{ secrets.RG_LA }} --settings "WORKFLOWS_RESOURCE_GROUP_NAME=${{ secrets.RG_CON }}"
+          az functionapp config appsettings set --name ${{ steps.ladeploy.outputs.LAname }} --resource-group  ${{ secrets.AZURE_RESOURCE_GROUP }} --settings "BLOB_CONNECTION_RUNTIMEURL=${{ steps.msdemoconn.outputs.blobendpointurl }}"
+          az functionapp config appsettings set --name ${{ steps.ladeploy.outputs.LAname }} --resource-group  ${{ secrets.AZURE_RESOURCE_GROUP}} --settings "WORKFLOWS_RESOURCE_GROUP_NAME=${{ secrets.AZURE_RESOURCE_GROUP}}"
 
   
   # Here is a sample second environment - all you'll need to do is create a new environment in your repositories Settings for RG_LA and RG_CON and you're good to go!
