echo echo "Committing changes to GitHub"

--- a/.github/workflows/IaC_deploy.yml
+++ b/.github/workflows/IaC_deploy.yml
@@ -17,8 +17,8 @@ jobs:
     environment: 
       name: Dev
     steps:
-
-    - run: echo ${{ env.AZURE_RESOURCE_GROUP }}
+    - name: echo resource group
+      run: echo "${{ env.AZURE_RESOURCE_GROUP }}"
 
     - name: Azure Login
       uses: azure/login@v1
