--- a/.github/workflows/IaC_deploy.yml
+++ b/.github/workflows/IaC_deploy.yml
@@ -39,7 +39,7 @@ jobs:
         # You can change these environment variables for your configuration:   AZURE_SUBSCRIPTION_ID, AZURE_RESOURCE_GROUP
         scope: resourcegroup  
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        resourceGroupName:  ${{ env.AZURE_RESOURCE_GROUP }}
+        resourceGroupName:  ${{ vars.AZURE_RESOURCE_GROUP }}
         template: ARM/la-template.json  # Set this to the location of your template file
         parameters: ARM/la-parameters.json # Set this to the location of your parameters file
         deploymentMode: Incremental
@@ -51,7 +51,7 @@ jobs:
       with:
         scope: resourcegroup  
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP}}
+        resourceGroupName: ${{ vars.AZURE_RESOURCE_GROUP}}
         template: ARM/connectors-template.json  # Set this to the location of your template file
         parameters: ARM/connectors-parameters.json logicAppSystemAssignedIdentityTenantId=${{ steps.ladeploy.outputs.logicAppSystemAssignedIdentityTenantId }} logicAppSystemAssignedIdentityObjectId=${{ steps.ladeploy.outputs.logicAppSystemAssignedIdentityObjectId }}
         deploymentMode: Incremental
@@ -60,8 +60,8 @@ jobs:
       uses: azure/CLI@v1
       with:
         inlineScript: |
-          az functionapp config appsettings set --name ${{ steps.ladeploy.outputs.LAname }} --resource-group  ${{ env.AZURE_RESOURCE_GROUP }} --settings "BLOB_CONNECTION_RUNTIMEURL=${{ steps.msdemoconn.outputs.blobendpointurl }}"
-          az functionapp config appsettings set --name ${{ steps.ladeploy.outputs.LAname }} --resource-group  ${{ env.AZURE_RESOURCE_GROUP}} --settings "WORKFLOWS_RESOURCE_GROUP_NAME=${{ env.AZURE_RESOURCE_GROUP}}"
+          az functionapp config appsettings set --name ${{ steps.ladeploy.outputs.LAname }} --resource-group  ${{ vars.AZURE_RESOURCE_GROUP }} --settings "BLOB_CONNECTION_RUNTIMEURL=${{ steps.msdemoconn.outputs.blobendpointurl }}"
+          az functionapp config appsettings set --name ${{ steps.ladeploy.outputs.LAname }} --resource-group  ${{ vars.AZURE_RESOURCE_GROUP}} --settings "WORKFLOWS_RESOURCE_GROUP_NAME=${{ env.AZURE_RESOURCE_GROUP}}"
 
   
   # Here is a sample second environment - all you'll need to do is create a new environment in your repositories Settings for RG_LA and RG_CON and you're good to go!
