--- a/.github/workflows/IaC_deploy.yml
+++ b/.github/workflows/IaC_deploy.yml
@@ -46,8 +46,8 @@ jobs:
         scope: resourcegroup  
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         resourceGroupName:  ${{ vars.AZURE_RESOURCE_GROUP }}
-        template: ARM/la-template.json  # Set this to the location of your template file
-        parameters: ARM/la-parameters.json # Set this to the location of your parameters file
+        template: ARM/la-template-dev.json  # Set this to the location of your template file
+        parameters: ARM/la-parameters-dev.json # Set this to the location of your parameters file
         deploymentMode: Incremental
    
     # Deployment of template    
@@ -59,7 +59,7 @@ jobs:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         resourceGroupName: ${{ vars.AZURE_RESOURCE_GROUP}}
         template: ARM/connectors-template.json  # Set this to the location of your template file
-        parameters: ARM/connectors-parameters.json logicAppSystemAssignedIdentityTenantId=${{ steps.ladeploy.outputs.logicAppSystemAssignedIdentityTenantId }} logicAppSystemAssignedIdentityObjectId=${{ steps.ladeploy.outputs.logicAppSystemAssignedIdentityObjectId }}
+        parameters: ARM/connectors-parameters-dev.json logicAppSystemAssignedIdentityTenantId=${{ steps.ladeploy.outputs.logicAppSystemAssignedIdentityTenantId }} logicAppSystemAssignedIdentityObjectId=${{ steps.ladeploy.outputs.logicAppSystemAssignedIdentityObjectId }}
         deploymentMode: Incremental
 
     - name: Update Logic App Connections 
