--- a/.github/workflows/logic_app_deploy.yml
+++ b/.github/workflows/logic_app_deploy.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v1
     - name: Package logic
-      run: (cd logic-apps; mkdir -p ../../build-art; zip -r ../../build-art/logic.zip .)
+      run: (cd logic-apps; mkdir -p ../build-art; zip -r ../build-art/logic.zip .)
     - name: Upload app zip package
       uses: actions/upload-artifact@v2
       with:
