--- a/.github/workflows/IaC_deploy.yml
+++ b/.github/workflows/IaC_deploy.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: (classic) Logic App Infrastructure as Code Pipeline. 
+name: Logic App Infrastructure as Code Workflow. 
 
 on:
   workflow_dispatch:
