--- a/.github/workflows/logic_app_deploy.yml
+++ b/.github/workflows/logic_app_deploy.yml
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [logic_app_build]
     environment: 
-      name: dev
+      name: Dev
     steps: 
     - name: Checkout
       uses: actions/checkout@v1    
