--- a/.github/workflows/logic_app_deploy.yml
+++ b/.github/workflows/logic_app_deploy.yml
@@ -76,5 +76,5 @@ jobs:
       uses: azure/powershell@v1
       with:
         inlineScript: |
-          az functionapp deploy --resource-group ${{ vars.AZURE_RESOURCE_GROUP }} --name ${{ vars.LOGIC_APP_NAME }} --src-path  logic/azure.parameters.json --type static --target-path parameters.json
+          az functionapp deploy --resource-group ${{ vars.AZURE_RESOURCE_GROUP }} --name ${{ vars.LOGIC_APP_NAME }} --src-path  logic-apps/azure.parameters.json --type static --target-path parameters.json
         azPSVersion: latest
