--- a/.github/workflows/logic_app_deploy.yml
+++ b/.github/workflows/logic_app_deploy.yml
@@ -58,13 +58,12 @@ jobs:
     - name: echo resource group
       run: echo "${{ vars.AZURE_RESOURCE_GROUP }}"    
 
-
     - name: Get publish Profile
       id: publishprofile
       uses: azure/powershell@v1
       with:
         inlineScript: |
-          $profile = Get-AzWebAppPublishingProfile -ResourceGroupName "${{ vars.AZURE_RESOURCE_GROUP}}" -Name "${{ vars.LOGIC_APP_NAME }}"
+          $profile = Get-AzWebAppPublishingProfile -ResourceGroupName '${{ vars.AZURE_RESOURCE_GROUP}}' -Name '${{ vars.LOGIC_APP_NAME }}' -Verbose
           $profile = $profile.Replace("`r", "").Replace("`n", "")
           Write-Output "::set-output name=profile::$profile"
         azPSVersion: latest
