--- a/.github/workflows/logic_app_deploy.yml
+++ b/.github/workflows/logic_app_deploy.yml
@@ -38,9 +38,7 @@ jobs:
     needs: [logic_app_build]
     environment: 
       name: Dev
-    env:
-      LOGIC_APP_NAME: ${{ vars.LOGIC_APP_NAME }}
-      AZURE_RESOURCE_GROUP: ${{ vars.AZURE_RESOURCE_GROUP }}
+    
     steps: 
     - name: Checkout
       uses: actions/checkout@v1    
@@ -54,16 +52,13 @@ jobs:
       with:
         name: logic
         path: ./build-art/
-    
-    - name: echo logic app name
-      run: echo "${{ LOGIC_APP_NAME}}"    
-
-    - name: echo resource group
-      run: echo "${{ AZURE_RESOURCE_GROUP}}"    
 
     - name: Get publish Profile
       id: publishprofile
       uses: azure/powershell@v1
+      env:
+        LOGIC_APP_NAME: ${{ vars.LOGIC_APP_NAME }}
+        AZURE_RESOURCE_GROUP: ${{ vars.AZURE_RESOURCE_GROUP }}
       with:
         inlineScript: |
           $profile = Get-AzWebAppPublishingProfile -ResourceGroupName ${{ env.AZURE_RESOURCE_GROUP}} -Name ${{ env.LOGIC_APP_NAME}}
@@ -74,14 +69,20 @@ jobs:
     - name: Deploy to Azure Logic App
       uses: Azure/functions-action@v1.3.1
       id: la
+      env:
+        LOGIC_APP_NAME: ${{ vars.LOGIC_APP_NAME }}
+        AZURE_RESOURCE_GROUP: ${{ vars.AZURE_RESOURCE_GROUP }}
       with:
-        app-name: ${{vars.AZURE_RESOURCE_GROUP}}
+        app-name: ${{var.AZURE_RESOURCE_GROUP}}
         package: './build-art/logic.zip'
         publish-profile: ${{steps.publishprofile.outputs.profile}}
 
     - name: Swap parameter files 
       id: params
       uses: azure/powershell@v1
+      env:
+        LOGIC_APP_NAME: ${{ vars.LOGIC_APP_NAME }}
+        AZURE_RESOURCE_GROUP: ${{ vars.AZURE_RESOURCE_GROUP }}
       with:
         inlineScript: |
           az functionapp deploy --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ env.LOGIC_APP_NAME }} --src-path  logic-apps/azure.parameters.json --type static --target-path parameters.json
