--- a/.github/workflows/logic_app_deploy.yml
+++ b/.github/workflows/logic_app_deploy.yml
@@ -1,8 +1,8 @@
 name: Build and Deploy Logic App. 
 
 env:
-  LOGIC_APP_NAME: 'ais-devops-mp-dev-la'
-  AZURE_RESOURCE_GROUP: 'ais-devops-mp-dev-rg'
+  LOGIC_APP_NAME_DEV: 'ais-devops-mp-dev-la'
+  AZURE_RESOURCE_GROUP_DEV: 'ais-devops-mp-dev-rg'
 
 on:
   workflow_dispatch:
@@ -62,7 +62,9 @@ jobs:
       uses: azure/powershell@v1
       with:
         inlineScript: |
-          $profile = Get-AzWebAppPublishingProfile -ResourceGroupName ${{ env.AZURE_RESOURCE_GROUP}} -Name ${{ env.LOGIC_APP_NAME}}
+          $profile = Get-AzWebAppPublishingProfile `
+              -ResourceGroupName ${{ env.AZURE_RESOURCE_GROUP_DEV}} `
+              -Name ${{ env.LOGIC_APP_NAME_DEV }}
           $profile = $profile.Replace("`r", "").Replace("`n", "")
           Write-Output "::set-output name=profile::$profile"
         azPSVersion: latest
@@ -71,7 +73,7 @@ jobs:
       uses: Azure/functions-action@v1.3.1
       id: la
       with:
-        app-name: ${{env.AZURE_RESOURCE_GROUP}}
+        app-name: ${{env.AZURE_RESOURCE_GROUP_DEV}}
         package: './build-art/logic.zip'
         publish-profile: ${{steps.publishprofile.outputs.profile}}
 
@@ -80,5 +82,5 @@ jobs:
       uses: azure/powershell@v1
       with:
         inlineScript: |
-          az functionapp deploy --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ env.LOGIC_APP_NAME }} --src-path  logic-apps/azure.parameters.json --type static --target-path parameters.json
+          az functionapp deploy --resource-group ${{ env.AZURE_RESOURCE_GROUP_DEV }} --name ${{ env.LOGIC_APP_NAME_DEV }} --src-path  logic-apps/azure.parameters.json --type static --target-path parameters.json
         azPSVersion: latest
