--- a/.github/workflows/logic_app_deploy.yml
+++ b/.github/workflows/logic_app_deploy.yml
@@ -2,7 +2,7 @@ name: Build and Deploy Logic App.
 
 env:
   RG: 'ais-devops-mp-dev-rg'
-  LANAME: 'ais-devops-mp-dev-la'
+  LANAME: 'email-triggered-la-dev'
 
 on:
   workflow_dispatch:
@@ -64,8 +64,8 @@ jobs:
       with:
         inlineScript: |
           $profile = Get-AzWebAppPublishingProfile `
-              -ResourceGroupName ais-devops-mp-dev-rg `
-              -Name email-triggered-la-dev 
+              -ResourceGroupName ${{env.RG}} `
+              -Name ${{env.LANAME}} 
           $profile = $profile.Replace("`r", "").Replace("`n", "")
           Write-Output "::set-output name=profile::$profile"
         azPSVersion: latest
