--- a/.github/workflows/logic_app_deploy.yml
+++ b/.github/workflows/logic_app_deploy.yml
@@ -64,8 +64,8 @@ jobs:
       with:
         inlineScript: |
           $profile = Get-AzWebAppPublishingProfile `
-              -ResourceGroupName ${{env.RG}} `
-              -Name ${{env.LANAME}} 
+              -ResourceGroupName ${{vars.AZURE_RESOURCE_GROUP}} `
+              -Name ${{vars.LOGIC_APP_NAME}} 
           $profile = $profile.Replace("`r", "").Replace("`n", "")
           Write-Output "::set-output name=profile::$profile"
         azPSVersion: latest
