--- a/.github/workflows/logic_app_deploy_qa.yml
+++ b/.github/workflows/logic_app_deploy_qa.yml
@@ -1,25 +1,28 @@
-name: Build and Deploy Logic App to Dev. 
+name: Build and Deploy Logic App to QA. 
 
-on:
-  workflow_dispatch:
-    # Trigger the workflow every time the infrastructure build workflow ran to completion
-  workflow_run:
-    workflows:
-      - Deploy Infrastructure
-    types:
-      - completed
-  # Triggers when Logic Apps workflow logic has changed  
-  push:
-    paths:
-      - "logic-apps/**"
-      - ".github/workflows/logicapp_deploy.yml"
+check_date:
+    runs-on: ubuntu-latest
+    name: Check latest commit
+    outputs:
+      should_run: ${{ steps.should_run.outputs.should_run }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: print latest_commit
+        run: echo ${{ github.sha }}
+
+      - id: should_run
+        continue-on-error: true
+        name: check latest commit is less than a day
+        if: ${{ github.event_name == 'schedule' }}
+        run: test -z $(git rev-list  --after="24 hours"  ${{ github.sha }}) && echo "::set-output name=should_run::false"
+
 
 jobs:
   logic_app_build: 
-    name: Build 
+    name: Build QA
     runs-on: ubuntu-latest
     environment: 
-      name: Dev
+      name: QA
     steps: 
     - name: Checkout
       uses: actions/checkout@v1
@@ -33,11 +36,11 @@ jobs:
         retention-days: 1 
 
   logic_app_deploy_dev: 
-    name: Deploy Dev 
+    name: Deploy QA 
     runs-on: ubuntu-latest
     needs: [logic_app_build]
     environment: 
-      name: Dev
+      name: QA
     
     steps: 
     - name: Checkout
