--- a/.github/workflows/logic_app_deploy_qa.yml
+++ b/.github/workflows/logic_app_deploy_qa.yml
@@ -24,6 +24,7 @@ jobs:
   logic_app_build: 
     name: Build QA
     runs-on: ubuntu-latest
+    needs: [check_date]
     environment: 
       name: QA
     steps: 
