--- a/.github/workflows/logic_app_deploy_qa.yml
+++ b/.github/workflows/logic_app_deploy_qa.yml
@@ -11,13 +11,13 @@ jobs:
     outputs:
       should_run: ${{ steps.should_run.outputs.should_run }}
     steps:
+    - uses: actions/checkout@v2
     - name: print latest_commit
-      uses: actions/checkout@v2
       run: echo ${{ github.sha }}
 
     - id: should_run
       continue-on-error: true
-    - name: check latest commit is less than a day
+      name: check latest commit is less than a day
       if: ${{ github.event_name == 'schedule' }}
       run: test -z $(git rev-list  --after="24 hours"  ${{ github.sha }}) && echo "::set-output name=should_run::false"
 
